# oss-maintainer-copilot

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  docs_onboarding.md  feature_request.md
.github/workflows/: ci.yml  issue-triage.yml  pr-summary.yml  release-notes.yml
docs/: v0.2-maintainer-workspace-plan.md
examples/: README.md
examples/issue-triage/: input.json  output.json  output.md
examples/onboarding-map/: input.json  output.json  output.md
examples/pr-brief/: output.json  output.md
examples/release-draft/: input.json  output.json  output.md
examples/repo-intel/: output.json  output.md
skills/: README.md
skills/draft-release-notes/: SKILL.md
skills/onboard-contributor/: SKILL.md
skills/prepare-pr-review/: SKILL.md
skills/triage-issue/: SKILL.md
src/oss_maintainer_copilot/: __init__.py  cli.py
src/oss_maintainer_copilot/agents/: __init__.py  good_first_issue.py  issue_triage.py  onboarding_map.py  pr_summary.py  release_notes.py  repo_intel.py  triage_rendering.py  triage_scoring.py  triage_signals.py
src/oss_maintainer_copilot/github/: __init__.py  events.py
src/oss_maintainer_copilot/prompts/: __init__.py  issue_triage.py
src/oss_maintainer_copilot/schemas/: __init__.py  common.py  github.py  good_first_issue.py  onboarding.py  pull_request.py  release_notes.py  repo_intel.py  triage.py
tests/: conftest.py  test_cli.py  test_examples_contracts.py  test_github_workflows.py  test_good_first_issue.py  test_issue_triage.py  test_onboarding_map.py  test_payload_loading.py  test_pr_summary.py  test_release_notes.py  test_repo_intel.py  test_skills_contracts.py
(+27 files in other folders)
